// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blog posts should handle buttons click 1`] = `
<div>
  <section
    class="posts"
  >
    <h1
      class="className posts__title"
      data-testid="blog-posts-title"
    >
      posts
    </h1>
    <div
      class="posts__wrapper"
    >
      <a
        href="/blog/6"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Business post"
              src="/assets/images/figma-design.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              business
            </h5>
            <h2>
              lorem-ipsum
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
      <a
        href="/blog/7"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Business post"
              src="/assets/images/featured-post.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              business
            </h5>
            <h2>
              lorem-ipsum
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
      <a
        href="/blog/8"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Technology post"
              src="/assets/images/featured-post.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              technology
            </h5>
            <h2>
              lorem-ipsum
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
      <a
        href="/blog/9"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Business post"
              src="/assets/images/featured-post.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              business
            </h5>
            <h2>
              lorem-ipsum
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
      <a
        href="/blog/10"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Startup post"
              src="/assets/images/blog-featured.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              startup
            </h5>
            <h2>
              step-by-step-guide
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
    </div>
    <div
      class="buttons"
    >
      <button
        class="button"
        data-testid="blog-posts-prev"
        type="button"
      >
        &lt;
         
        prev
         
      </button>
      <button
        class="button"
        data-testid="blog-posts-next"
        type="button"
      >
        next
         
        &gt;
      </button>
    </div>
  </section>
</div>
`;

exports[`Blog posts should render blog posts component 1`] = `
<div>
  <section
    class="posts"
  >
    <h1
      class="className posts__title"
      data-testid="blog-posts-title"
    >
      posts
    </h1>
    <div
      class="posts__wrapper"
    >
      <a
        href="/blog/1"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Business post"
              src="/assets/images/featured-post.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              business
            </h5>
            <h2>
              lorem-ipsum
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
      <a
        href="/blog/2"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Startup post"
              src="/assets/images/blog-featured.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              startup
            </h5>
            <h2>
              step-by-step-guide
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
      <a
        href="/blog/3"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Startup post"
              src="/assets/images/design-post.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              startup
            </h5>
            <h2>
              lorem-ipsum
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
      <a
        href="/blog/4"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Technology post"
              src="/assets/images/build-rapport.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              technology
            </h5>
            <h2>
              lorem-ipsum
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
      <a
        href="/blog/5"
      >
        <div
          class="post"
        >
          <div
            class="image"
          >
            <img
              alt="Economy post"
              src="/assets/images/design-post.jpg"
            />
          </div>
          <div
            class="content"
          >
            <h5>
              economy
            </h5>
            <h2>
              lorem-ipsum
            </h2>
            <p
              class="body-s"
            >
              duis-aute
            </p>
          </div>
        </div>
      </a>
    </div>
    <div
      class="buttons"
    >
      <button
        class="button"
        data-testid="blog-posts-prev"
        disabled=""
        type="button"
      >
        &lt;
         
        prev
         
      </button>
      <button
        class="button"
        data-testid="blog-posts-next"
        type="button"
      >
        next
         
        &gt;
      </button>
    </div>
  </section>
</div>
`;
